--- a/templates/rrhh.html
+++ b/templates/rrhh.html
@@ -21,6 +21,7 @@
     <div id="resultados">
       <!-- Aca van los resultados de los usuarios -->
     </div>
+    <div id="copiadoCartel" class="copiado-cartel">Copiado</div>
     <script src="../js/rrhh-app.js"></script>
   </body>
 </html>
