Agregado de accesorios de los usuarios

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,3 +169,30 @@ form p {
         font-size: 1.5rem;
     }
 }
+
+select {
+    width: 70%;
+    height: 2rem;
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+    border: 1px solid #ccc;
+    padding: 0 0.5rem;
+    font-size: 1rem;
+}
+
+select option {
+    font-size: 1rem;
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+}
+
+select option:hover {
+    background-color: #555;
+    color: #fff;
+}
+
+select option:active {
+    background-color: #777;
+    color: #fff;
+}
+
