--- a/css/rrhh.css
+++ b/css/rrhh.css
@@ -45,6 +45,7 @@ nav {
     font-size: 16px;
     cursor: pointer;
     margin-left: 5px;
+    display: none;
 }
 
 .search button:focus {
@@ -170,6 +171,10 @@ nav {
     border-radius: 5px;
     position: relative;
     margin: auto;
+}
+
+.modal .modal-content h2 {
+    margin-bottom: 14px;
 }
 
 .close {
