--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,26 @@ form p {
     background-color: #555;
 }
 
+.copiado-cartel {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(59, 182, 48);
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1000;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease-in-out;
+}
+
+.copiado-cartel.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
 @media screen and (max-width: 400px) {
     body {
         font-size: 14px;
