--- a/css/baja.css
+++ b/css/baja.css
@@ -63,13 +63,13 @@ h1 span {
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    padding: 0 20px;
 }
 
 .equipo-devolver table {
     width: 100%;
     border-collapse: collapse;
-    margin-left: 20px;
-    margin-right: 20px;
+
 }
 
 .equipo-devolver table th {
@@ -80,7 +80,7 @@ h1 span {
 }
 
 .equipo-devolver table td {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #000000;
     padding: 8px;
 }
 
@@ -128,7 +128,42 @@ h1 span {
 }
 
 img {
-    width: 80%;
     height: 80%;
 }
 
+.btn-imprimir {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.btn-imprimir:hover {
+    transition: all 0.4s ease 0s;
+    background-color: #3e8e41;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+}
+
+.btn-imprimir:active {
+    transition: all 0.4s ease 0s;
+    box-shadow: 0px 3px 5px rgba(46, 229, 157, 0.4);
+    transform: translateY(-2px);
+}
+
+@media print {
+    head, .btn-imprimir {
+        display: none;
+    }
+
+}
