--- a/css/baja.css
+++ b/css/baja.css
@@ -1,6 +1,6 @@
 body {
     width: 21cm; 
-    height: 29.7cm; 
+/*    height: 29.7cm; */
     margin: auto; 
     background-color: #ffffff;
 }
@@ -10,7 +10,8 @@ body {
     left: 0;
     width: fit-content;
     height: fit-content;
-    margin-left: 20px;
+/*  margin-left: 20px; */
+    margin-top:20px;
 }
 
 .logo h2 {
@@ -47,8 +48,7 @@ h1 span {
 }
 
 .datos-de-usuario p {
-    margin-top: 2px;
-    margin-left: 20px;
+    margin: 0 0 10px 0;
 }
 
 .datos-de-usuario span {
@@ -63,7 +63,7 @@ h1 span {
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    padding: 0 20px;
+    padding: 0;
 }
 
 .equipo-devolver table {
@@ -80,7 +80,7 @@ h1 span {
 }
 
 .equipo-devolver table td {
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid #eee;
     padding: 8px;
 }
 
@@ -89,7 +89,7 @@ h1 span {
 }
 
 .equipo-devolver table tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #eee;
 }
 
 .equipo-devolver table tr:nth-child(odd) {
@@ -98,11 +98,11 @@ h1 span {
 
 
 .equipo-devolver table td:first-child {
-    width: 50%;
+/*    width: 50%; */
 }
 
 .equipo-devolver table td:last-child {
-    width: 50%;
+/*    width: 50%; */
 }
 
 .equipo-devolver table td:nth-child(2) {
@@ -165,5 +165,23 @@ img {
     head, .btn-imprimir {
         display: none;
     }
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
 
+* {
+-webkit-print-color-adjust: exact;
+}  
+
+}
+
+table * {
+  background-color:transparent;
+  border:none;
+  font-size:16px;
+  font-family:'arial';
+  text-align:center
+    
 }
