--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -15,7 +19,7 @@ body {
 }
 
 section {
-    width: 40%;
+    width: 60%;
     height: 100%;
     display: none;
     flex-direction: column;
@@ -24,6 +28,7 @@ section {
     background-color: rgb(228, 230, 231);
     border-radius: 21px;
     margin-bottom: 2rem;
+    padding: 0 1rem;
 }
 
 form {
@@ -42,7 +47,7 @@ form label {
 }
 
 form input {
-    width: 70%;
+    width: 90%;
     height: 2rem;
     margin-bottom: 1rem;
     border-radius: 0.5rem;
@@ -82,6 +87,7 @@ form p {
     display: flex;
     list-style: none;
     align-items: center;
+    padding: 0 1rem;
 }
 
 .navbar ul li {
@@ -97,7 +103,7 @@ form p {
 
 /* Darle los detalles al boton de la navbar */
 .navbar button {
-    width: 5rem;
+/*  width: 5rem; */
     height: 3rem;
     border-radius: 0.5rem;
     border: none;
@@ -106,6 +112,7 @@ form p {
     font-size: 1rem;
     font-weight: 500;
     cursor: pointer;
+    padding: 0 1rem;
 }
 
 .navbar button:hover {
@@ -191,7 +198,7 @@ form p {
 }
 
 select {
-    width: 70%;
+    width: 90%;
     height: 2rem;
     margin-bottom: 1rem;
     border-radius: 0.5rem;
