--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,10 @@ form p {
     background-color: #777;
 }
 
+.navbar button:nth-child(4) {
+    background-color: rgb(255, 50, 50);
+}
+
 /* buscar.php */
 .btns-buscar {
     display: flex;
