--- a/css/styles.css
+++ b/css/styles.css
@@ -1125,3 +1125,48 @@ body {
   font-weight: 600;
   color: var(--dark);
 }
+
+/* boton filtrar para aparecer una lista de opciones debajo del boton */
+.bx-filter {
+  border-radius: 50%;
+}
+
+.bx-filter:hover {
+  transition: all 0.3s ease;
+  background-color: var(--light-primary);
+  color: var(--primary);
+}
+
+.filtro-menu {
+  position: relative;
+  display: inline-block;
+  right: 7rem;
+  top: 0.65rem;
+  cursor: pointer;
+}
+
+.filtro-menu ul {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: var(--light);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 10px;
+  padding: 0;
+  margin: 0;
+}
+
+.filtro-menu ul li {
+  color: var(--dark);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+  border-bottom: 1px solid var(--grey);
+}
+
+.filtro-menu ul li:hover {
+  background-color: var(--grey);
+}
